# matrix-bridge-qq

./: .gitignore  Cargo.toml  README.md  _todos.md  config.example.kdl  example-config.yaml  todos.md
.github/workflows/: crates-release.yml  docker.yml  release.yml  tests.yml
migrations/: 001_initial.sql
src/: lib.rs  main.rs
src/bridge/: mod.rs  qq_bridge.rs
src/config/: bridge.rs  mod.rs
src/database/: mod.rs
src/matrix/: appservice.rs  client.rs  mod.rs  types.rs
src/parsers/: common.rs  matrix_parser.rs  mod.rs  qq_parser.rs
src/qq/: client.rs  mod.rs  service.rs  types.rs
