[package]
name = "matrix-bridge-qq"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Palpo IM Contributors"]
description = "A Matrix-QQ bridge implemented in Rust with Salvo"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.13.2", features = ["json"] }
salvo = { version = "0.89", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
diesel = { version = "2.3.6", default-features = false, features = ["sqlite", "postgres", "r2d2"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
regex = "1"
url = "2"

[profile.release]
lto = true
strip = true
opt-level = 3
